profilelist1exp/unpackaged/objects/Install_Base__c.object
<CustomObject>
    <fields>
        <fullName>Performance_Monitors__c</fullName>
        <label>Performance Monitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA Introscope (Wily)</fullName>
                </value>
                <value>
                    <fullName>CA Spectrum</fullName>
                </value>
                <value>
                    <fullName>HP BAC</fullName>
                </value>
                <value>
                    <fullName>HP OpenView</fullName>
                </value>
                <value>
                    <fullName>HP Sitescope</fullName>
                </value>
                <value>
                    <fullName>IBM Netcool</fullName>
                </value>
                <value>
                    <fullName>IBM Tivoli</fullName>
                </value>
                <value>
                    <fullName>Microsoft SCOM</fullName>
                </value>
                <value>
                    <fullName>VMWare vCenter</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <label>Plans</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Workload__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application/OS Update/Upgrade</fullName>
                </value>
                <value>
                    <fullName>Application Consolidation</fullName>
                </value>
                <value>
                    <fullName>Application Integration</fullName>
                </value>
                <value>
                    <fullName>Application Migration</fullName>
                </value>
                <value>
                    <fullName>Application Update/Upgrade</fullName>
                    <isActive>false</isActive>
                    <label>Application Update/Upgrade</label>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>BCDR</fullName>
                    <isActive>false</isActive>
                    <label>BCDR</label>
                </value>
                <value>
                    <fullName>Business Continuity / Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>BYOD</fullName>
                </value>
                <value>
                    <fullName>Client Virtualization</fullName>
                </value>
                <value>
                    <fullName>Consolidation</fullName>
                    <isActive>false</isActive>
                    <label>Consolidation</label>
                </value>
                <value>
                    <fullName>Custom Application Development</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Governance, Risk, Compliance</fullName>
                </value>
                <value>
                    <fullName>GRC</fullName>
                    <isActive>false</isActive>
                    <label>GRC</label>
                </value>
                <value>
                    <fullName>Hardware Refresh</fullName>
                </value>
                <value>
                    <fullName>HW Refresh</fullName>
                    <isActive>false</isActive>
                    <label>HW Refresh</label>
                </value>
                <value>
                    <fullName>Infrastructure refresh</fullName>
                    <isActive>false</isActive>
                    <label>Infrastructure refresh</label>
                </value>
                <value>
                    <fullName>IoT</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                    <isActive>false</isActive>
                    <label>Migration</label>
                </value>
                <value>
                    <fullName>Mobile Application Development</fullName>
                </value>
                <value>
                    <fullName>Modernization</fullName>
                </value>
                <value>
                    <fullName>Monitoring system</fullName>
                </value>
                <value>
                    <fullName>New Implementation</fullName>
                </value>
                <value>
                    <fullName>Private cloud</fullName>
                </value>
                <value>
                    <fullName>Public cloud</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Server Consolidation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Incumbent__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Primary Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>3i-Infotech</fullName>
                </value>
                <value>
                    <fullName>3 Par</fullName>
                </value>
                <value>
                    <fullName>Acando</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Acronis</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>Aditro</fullName>
                </value>
                <value>
                    <fullName>Affiliated Computer Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Alldata</fullName>
                </value>
                <value>
                    <fullName>Almaviva Group</fullName>
                </value>
                <value>
                    <fullName>Aloha</fullName>
                </value>
                <value>
                    <fullName>Alphawest</fullName>
                </value>
                <value>
                    <fullName>Altiris</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Amcon Solution Group (ASG)</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>Analysts International</fullName>
                </value>
                <value>
                    <fullName>Anite</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>AppAssure</fullName>
                </value>
                <value>
                    <fullName>AppDynamics</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Quantity__c</fullName>
        <label>Primary Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Incumbent__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Secondary Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>3i-Infotech</fullName>
                </value>
                <value>
                    <fullName>3 Par</fullName>
                </value>
                <value>
                    <fullName>Acando</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Acronis</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>Aditro</fullName>
                </value>
                <value>
                    <fullName>Affiliated Computer Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Alldata</fullName>
                </value>
                <value>
                    <fullName>Almaviva Group</fullName>
                </value>
                <value>
                    <fullName>Aloha</fullName>
                </value>
                <value>
                    <fullName>Alphawest</fullName>
                </value>
                <value>
                    <fullName>Altiris</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Amcon Solution Group (ASG)</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>Analysts International</fullName>
                </value>
                <value>
                    <fullName>Anite</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>AppAssure</fullName>
                </value>
                <value>
                    <fullName>AppDynamics</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Quantity__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Secondary Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <label>Security</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachmate(Net IQ. Novell)</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM (Q1 Lab)</fullName>
                </value>
                <value>
                    <fullName>Log Rhythm</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>RSA</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Desk_Technologies__c</fullName>
        <label>Services Desk Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMC Remedy</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>HP Service Desk</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>----------------Other----------------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Incumbent__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Third Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LOB__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>3i-Infotech</fullName>
                </value>
                <value>
                    <fullName>3 Par</fullName>
                </value>
                <value>
                    <fullName>Acando</fullName>
                </value>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
                <value>
                    <fullName>Acronis</fullName>
                </value>
                <value>
                    <fullName>Acxiom</fullName>
                </value>
                <value>
                    <fullName>Aditro</fullName>
                </value>
                <value>
                    <fullName>Affiliated Computer Services (ACS)</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Alldata</fullName>
                </value>
                <value>
                    <fullName>Almaviva Group</fullName>
                </value>
                <value>
                    <fullName>Aloha</fullName>
                </value>
                <value>
                    <fullName>Alphawest</fullName>
                </value>
                <value>
                    <fullName>Altiris</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Amcon Solution Group (ASG)</fullName>
                </value>
                <value>
                    <fullName>Amdocs</fullName>
                </value>
                <value>
                    <fullName>Analysts International</fullName>
                </value>
                <value>
                    <fullName>Anite</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>AppAssure</fullName>
                </value>
                <value>
                    <fullName>AppDynamics</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>ASUS</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Quantity__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Third Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dell_Quantity__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc -  ||
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <formula>IF(ISPICKVAL( Primary_Incumbent__c , &quot;Dell&quot;), Primary_Quantity__c ,
IF(ISPICKVAL( Secondary_Incumbent__c , &quot;Dell&quot;), Secondary_Quantity__c ,
IF(ISPICKVAL( Third_Incumbent__c , &quot;Dell&quot;), Third_Quantity__c ,
IF(ISPICKVAL( Fourth_Incumbent__c , &quot;Dell&quot;), Fourth_Quantity__c ,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dell Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <description>INTEG-N/NON INTEG -Y/ APEX/CC -N||
WF / APP/ FU / OM -  N||
Desc - PrimaryQuantity + SecondaryQuantity + ThirdQuantity + FourthQuantityc |
SFA -Y/PRM -N||
VAL -N|| 
CR# - ||</description>
        <formula>Primary_Quantity__c +  Secondary_Quantity__c  + Third_Quantity__c +  Fourth_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workload_Category__c</fullName>
        <label>Workload Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Applications</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Data Analytics</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>End User Computing</fullName>
                </value>
                <value>
                    <fullName>HPCC</fullName>
                </value>
                <value>
                    <fullName>PC Lifecycle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workload_Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workload Key Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Install Base</relationshipLabel>
        <relationshipName>Install_Base</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workload_Name__c</fullName>
        <label>Workload Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workload__c</fullName>
        <label>Workload</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workload_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>App Delivery</fullName>
                </value>
                <value>
                    <fullName>App Integ</fullName>
                    <isActive>false</isActive>
                    <label>App Integ</label>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Backup &amp; Restore</fullName>
                </value>
                <value>
                    <fullName>Bank Teller</fullName>
                </value>
                <value>
                    <fullName>BCDR</fullName>
                    <isActive>false</isActive>
                    <label>BCDR</label>
                </value>
                <value>
                    <fullName>Big Data</fullName>
                    <isActive>false</isActive>
                    <label>Big Data</label>
                </value>
                <value>
                    <fullName>Big Data Analytics</fullName>
                </value>
                <value>
                    <fullName>BMS</fullName>
                    <isActive>false</isActive>
                    <label>BMS</label>
                </value>
                <value>
                    <fullName>BU/Restore</fullName>
                    <isActive>false</isActive>
                    <label>BU/Restore</label>
                </value>
                <value>
                    <fullName>Business Continuity &amp; Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>Business Management System</fullName>
                </value>
                <value>
                    <fullName>Call center</fullName>
                </value>
                <value>
                    <fullName>Classic business use</fullName>
                </value>
                <value>
                    <fullName>Client Virtualization</fullName>
                </value>
                <value>
                    <fullName>Content Management</fullName>
                </value>
                <value>
                    <fullName>Cont Mgt</fullName>
                    <isActive>false</isActive>
                    <label>Cont Mgt</label>
                </value>
                <value>
                    <fullName>Crash Cart</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                    <isActive>false</isActive>
                    <label>CRM</label>
                </value>
                <value>
                    <fullName>Cust 360</fullName>
                    <isActive>false</isActive>
                    <label>Cust 360</label>
                </value>
                <value>
                    <fullName>Cust Engmt</fullName>
                    <isActive>false</isActive>
                    <label>Cust Engmt</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                    <isActive>false</isActive>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>Custom Business Application</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Customer Intimacy Analytics</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship Management</fullName>
                </value>
                <value>
                    <fullName>Data Lake</fullName>
                </value>
                <value>
                    <fullName>Data Mart</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Data WH</fullName>
                    <isActive>false</isActive>
                    <label>Data WH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workstation_Qty__c</fullName>
        <label>Workstation Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workstation__c</fullName>
        <label>Workstation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Workload_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Fujitsu Siemens</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Lenovo</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>Nvidia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Install Base</label>
    <nameField>
        <displayFormat>IB - {000000}</displayFormat>
        <label>Competitive Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Install Base</pluralLabel>
    <recordTypes>
        <fullName>All_Other_LOB</fullName>
        <active>true</active>
        <description>LOB other than Software</description>
        <label>All Other LOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dell_Services_LOB</fullName>
        <active>true</active>
        <description>LOB is Dell Services</description>
        <label>Dell Services LOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_LOB</fullName>
        <active>true</active>
        <description>LOB is Software</description>
        <label>Software LOB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workload_Environment</fullName>
        <active>true</active>
        <description>Capture and share actionable information about your account’s workload environments</description>
        <label>Workload Environment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Reparenting</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(Account__c), 
AND(NOT(CONTAINS( $Profile.Name ,&apos;IT GBL Data Load&apos;)), 
NOT(CONTAINS( $Profile.Name ,&apos;IT TA User&apos;)), 
NOT(CONTAINS( $Profile.Name ,&apos;IT Integration API Only&apos;)),
NOT(CONTAINS( $Profile.Name ,&apos;System Administrator&apos;)),  
NOT(CONTAINS( $Profile.Name ,&apos;R16.10 Global CRM Support&apos;)), 
NOT(CONTAINS( $Profile.Name ,&apos;R16.10 Global CRM Support - Non SSO&apos;))))</errorConditionFormula>
        <errorMessage>Account field cannot be changed after the record is created, please choose cancel to return to the record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R94_Check_for_Incumbent</fullName>
        <active>true</active>
        <description>If a quantity has been entered there has to be an incumbent.</description>
        <errorConditionFormula>OR(
AND(Primary_Quantity__c &gt;0 , ISPICKVAL( Primary_Incumbent__c , &quot;&quot;)),
AND(Secondary_Quantity__c &gt;0 , ISPICKVAL( Secondary_Incumbent__c , &quot;&quot;)),
AND(Third_Quantity__c &gt;0 , ISPICKVAL( Third_Incumbent__c , &quot;&quot;)),
AND(Fourth_Quantity__c &gt;0 , ISPICKVAL( Fourth_Incumbent__c , &quot;&quot;)))</errorConditionFormula>
        <errorMessage>Please select an incumbent for the quantities entered.</errorMessage>
    </validationRules>
</CustomObject>